ortho_config/tests/ui/short_flag_collision.stderr
error: short flag collision; supply `cli_short` to disambiguate
 --> tests/ui/short_flag_collision.rs:8:5
  |
8 |     spare: Option<String>,
  |     ^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/short_flag_collision.rs:9:2
  |
9 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/short_flag_collision.rs`
